Revert "z-index issue for components"
This reverts commit 72d3e16088a2f6f88c67dcb8142a4a2ae24cd1f8.

--- a/public/less/frontend/components/component-wrap.less
+++ b/public/less/frontend/components/component-wrap.less
@@ -1,6 +1,7 @@
 .component-wrap {
     display: block;
     position: relative;
+    z-index: 2;
     div.element-wrap{
         word-wrap: break-word;
         img.img-responsive{
